--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,4 +15,4 @@ jobs:
   build:
     name: Build
     needs: tests
-    uses: aukilabs/go-tooling/.github/workflows/build.yml@feature/reusable-workflows
+    uses: aukilabs/go-tooling/.github/workflows/build.yml@main
