build: try to exclude tags from being tested/built twice

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,9 +9,11 @@ concurrency:
 jobs:
   tests:
     name: Tests
+    if: "!startsWith(github.ref, 'refs/tags/')"
     uses: aukilabs/go-tooling/.github/workflows/tests.yml@main
     with:
       enable_coverage: true
   build:
     name: Build
+    if: "!startsWith(github.ref, 'refs/tags/')"
     uses: aukilabs/go-tooling/.github/workflows/build.yml@main
