--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,10 +1,6 @@
 name: Test and build
 
-on:
-  push:
-    branches:
-      - '**'
-  pull_request:
+on: [pull_request]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
