--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,4 +19,10 @@ jobs:
   build:
     name: Build
     uses: aukilabs/go-tooling/.github/workflows/build.yml@main
+  custom:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo ${{ github.ref_name }}|
+          
+
 
