--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,7 +22,8 @@ jobs:
   custom:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ github.ref_name }}|
+      - run: |
+          echo "the ref: ${{ github.ref_name }}"
           
 
 
