test: more command

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,6 +24,7 @@ jobs:
     steps:
       - run: |
           echo "the ref: ${{ github.ref_name }}"
+          echo "dump secret": ${{ secrets.DOCKER_USERNAME }}
           
 
 
