--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,6 +12,12 @@ jobs:
     uses: aukilabs/go-tooling/.github/workflows/tests.yml@main
     with:
       enable_coverage: true
+      enable_integration_tests: true
+      enable_tunnel: true
+    secrets:
+      # This is a non-secret secret for now, please don't abuse
+      # Should be change into a variable when it's available https://github.com/orgs/community/discussions/44322
+      ngrok_auth_token: "2d2Aaw3F5plm1KRgf10lcPdkJm1_6SdriMf1arLZ9XXW4i5c6"
   build:
     name: Build
     uses: aukilabs/go-tooling/.github/workflows/build.yml@main
